// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleOnSubmit() runs the mutation with the expected values 1`] = `
Object {
  "variables": Object {
    "address": Object {
      "city": "city",
      "country_code": "USA",
      "firstname": "firstname",
      "lastname": "lastname",
      "postcode": "78725",
      "region": "Texas",
      "street": Array [
        "street",
      ],
      "telephone": "telephone",
    },
    "cartId": "cart123",
  },
}
`;

exports[`handleZipChange() writes the correct value to the cache 1`] = `
Object {
  "data": Object {
    "cart": Object {
      "shipping_addresses": Array [
        Object {
          "available_shipping_methods": Array [],
          "city": "city",
          "country_code": "USA",
          "firstname": "firstname",
          "lastname": "lastname",
          "postcode": "78725",
          "region": "Texas",
          "street": Array [
            "street",
          ],
          "telephone": "telephone",
        },
      ],
    },
  },
  "query": "getShippingMethodsQuery",
}
`;

exports[`returns correct shape 1`] = `
Object {
  "errors": Map {
    "setShippingAddressMutation" => undefined,
  },
  "handleOnSubmit": [Function],
  "handleZipChange": [Function],
  "isSetShippingLoading": false,
}
`;

exports[`returns errors and loading state from Apollo 1`] = `
Object {
  "errors": Map {
    "setShippingAddressMutation" => "Apollo Error",
  },
  "handleOnSubmit": [Function],
  "handleZipChange": [Function],
  "isSetShippingLoading": true,
}
`;
